@@ -46,6 +46,8 @@ Engine fixes:
 * Fix crash when fonts are missing. The engine will try to fall back to the next available font for the current language.
 * Background color when using sdl_hardware renderer no longer fills entire window, instead only filling the drawing surface as it should.
 * Fix crash when loading a cutscene from a book event.
+* Fix infinite transformation loop when dying in a transformed state that was activated by a passive power.
+* Fix bug where the player wasn't returned to their normal state after dying in a transformed state.
 
 Game updates:
 
